--- a/push.gradle
+++ b/push.gradle
@@ -25,4 +25,10 @@ android {
     defaultConfig {
         applicationId = doExtractStringFromManifest("package")
     }
+	
+	configurations.all {
+		resolutionStrategy {
+			force 'com.android.support:support-v4:23.4.0'
+		}
+	}
 }
